--- a/ideas organization.ipynb
+++ b/ideas organization.ipynb
@@ -13,6 +13,8 @@
     "2. https://nces.ed.gov/ccd/tables/ACGR_RE_and_characteristics_2015-16.asp \n",
     "which is an html table format, you can also download in excel\n",
     "table is Public high school 4-year adjusted cohort graduation rate (ACGR), by race/ethnicity and selected demographic characteristics for the United States, the 50 states, and the District of Columbia: School year 2015–16"
+    "3. https://nces.ed.gov/programs/digest/d17/tables/dt17_105.20.asp"
+    "Level and control of institution, enrollment level, and attendance status and sex  of student"
    ]
   },
   {
