--- a/nces_internationalscores.ipynb
+++ b/nces_internationalscores.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 165,
    "metadata": {
     "scrolled": true
    },
@@ -114,7 +114,7 @@
        "      <th>Instructional time in science</th>\n",
        "      <th>As a percent of total instructional hours</th>\n",
        "      <th>Hours per year</th>\n",
-       "      <th>Average score</th>\n",
+       "      <th>Average Science score</th>\n",
        "      <th>As a percent of total instructional hours</th>\n",
        "      <th>1</th>\n",
        "      <th>3</th>\n",
@@ -318,13 +318,13 @@
        "Belgium (Flemish)6                                                        23   \n",
        "Bulgaria                                                                  15   \n",
        "\n",
-       "                                  Hours per year Average score  \\\n",
-       "Country or other education system                                \n",
-       "International average3                     (0.1)           500   \n",
-       "Australia                                  (0.4)           524   \n",
-       "Bahrain5                                   (0.3)           459   \n",
-       "Belgium (Flemish)6                         (0.4)           512   \n",
-       "Bulgaria                                   (0.7)           536   \n",
+       "                                  Hours per year Average Science score  \\\n",
+       "Country or other education system                                        \n",
+       "International average3                     (0.1)                   500   \n",
+       "Australia                                  (0.4)                   524   \n",
+       "Bahrain5                                   (0.3)                   459   \n",
+       "Belgium (Flemish)6                         (0.4)                   512   \n",
+       "Bulgaria                                   (0.7)                   536   \n",
        "\n",
        "                                   As a percent of total instructional hours  \\\n",
        "Country or other education system                                              \n",
@@ -343,21 +343,21 @@
        "Bulgaria                           (5.9)   42  NaN  (2.3)   6  (0.4)  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "table = pd.read_html(url)[3]\n",
-    "table.columns=['Country or other education system','Total instructional hours per year','2','[Standard errors appear in parentheses]', 'Average Math score','Mathematics','Science','Instructional time in mathematics', 'Hours per year','Instructional time in science','As a percent of total instructional hours','Hours per year','Average  score','As a percent of total instructional hours','1','3','4','5','6','7']\n",
+    "table.columns=['Country or other education system','Total instructional hours per year','2','[Standard errors appear in parentheses]', 'Average Math score','Mathematics','Science','Instructional time in mathematics', 'Hours per year','Instructional time in science','As a percent of total instructional hours','Hours per year','Average Science score','As a percent of total instructional hours','1','3','4','5','6','7']\n",
     "table.set_index('Country or other education system', inplace=True)\n",
     "table.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Average Math score</th>\n",
-       "      <th>Average score</th>\n",
+       "      <th>Average Science score</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country or other education system</th>\n",
@@ -471,24 +471,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                                   Average Math score Average score\n",
-       "Country or other education system                                  \n",
-       "International average3                          500.0           500\n",
-       "Australia                                       517.0           524\n",
-       "Bahrain5                                        451.0           459\n",
-       "Belgium (Flemish)6                              546.0           512\n",
-       "Bulgaria                                        524.0           536\n",
-       "...                                               ...           ...\n",
-       "Buenos Aires (Argentina)                        432.0           418\n",
-       "Dubai (United Arab Emirates)                    511.0           518\n",
-       "Florida14 (United States)                       546.0           549\n",
-       "Ontario (Canada)                                512.0           530\n",
-       "Quebec15 (Canada)                               536.0           525\n",
+       "                                   Average Math score Average Science score\n",
+       "Country or other education system                                          \n",
+       "International average3                          500.0                   500\n",
+       "Australia                                       517.0                   524\n",
+       "Bahrain5                                        451.0                   459\n",
+       "Belgium (Flemish)6                              546.0                   512\n",
+       "Bulgaria                                        524.0                   536\n",
+       "...                                               ...                   ...\n",
+       "Buenos Aires (Argentina)                        432.0                   418\n",
+       "Dubai (United Arab Emirates)                    511.0                   518\n",
+       "Florida14 (United States)                       546.0                   549\n",
+       "Ontario (Canada)                                512.0                   530\n",
+       "Quebec15 (Canada)                               536.0                   525\n",
        "\n",
        "[66 rows x 2 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,6 +496,16 @@
    "source": [
     "new_table=table.drop(columns=[\"2\", \"Instructional time in mathematics\",'Total instructional hours per year','[Standard errors appear in parentheses]', 'Mathematics','Science','Hours per year','Instructional time in science','As a percent of total instructional hours','Hours per year','As a percent of total instructional hours','1','3','4','5','6','7'])\n",
     "new_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_data=new_table.to_csv\n",
+    "csv_data('csv_data.csv')"
    ]
   },
   {
